# formora

./: README.md
.github/workflows/: build.yml  release.yml  test.yml
examples/: conditional_form.py  multistep_form.py  simple_form.py
formora-core/: Cargo.toml
formora-core/src/: builder.rs  conditions.rs  lib.rs  parser.rs  renderer.rs  schema.rs  steps.rs  validator.rs
formora-core/src/css/: bootstrap.rs  custom.rs  mod.rs  profile.rs  tailwind.rs
formora-py/: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml
formora-py/formora/: __init__.py  llm.py
formora-py/formora/adapters/: __init__.py  chainlit.js  generic.js  gradio.js  openwebui.js
formora-py/src/: lib.rs
