[package]
name = "formora"
version = "0.1.0"
edition = "2021"
description = "Interactive form widgets for chat applications"
license = "MIT"

[lib]
name = "formora"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
formora-core = { path = "../formora-core" }
uuid = { version = "1.0", features = ["v4"] }
