[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name = "formora"
version = "0.1.0"
description = "Interactive form widgets for chat applications"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "YASSERRMD", email = "arafath.yasser@gmail.com" },
]
keywords = ["forms", "chat", "llm", "widgets", "interactive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."

[project.optional-dependencies]
llm = []
dev = ["pyo3-stub-gen>=0.3.0"]

[tool.stub-gen]
# Configure pyo3-stub-gen settings
virtual_path = "formora/formora"
